--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint-visitor-keys": "^3.4.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1"
   },
   "keywords": [],
