--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
-    "mysql2": "^3.6.1"
+    "mysql2": "^3.6.1",
+    "uuid": "^9.0.1"
   },
   "keywords": [],
   "description": ""
