--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "body-parser": "^1.20.2",
+    "epub-parser": "^0.2.5",
     "eslint-scope": "^7.2.2",
     "eslint-visitor-keys": "^3.4.3",
     "express": "^4.18.2",
@@ -22,7 +23,8 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
-    "mysql2": "^3.6.1",
+    "mysql2": "^3.6.2",
+    "path": "^0.12.7",
     "uuid": "^9.0.1",
     "xlsx": "^0.18.5"
   },
