--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "epub-parser": "^0.2.5",
     "eslint-scope": "^7.2.2",
     "eslint-visitor-keys": "^3.4.3",
@@ -23,7 +24,7 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
-    "mysql2": "^3.6.2",
+    "mysql2": "^3.6.3",
     "path": "^0.12.7",
     "uuid": "^9.0.1",
     "xlsx": "^0.18.5"
